--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>login</h1>
                 <p>seja bem-vindo(a) novamente. faça login para acessar 
                     sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post" autocomplete="on"></form>
+                <form action="login.php" method="post" autocomplete="onfff"></form>
             </div>
         </section>
     </main>
