--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
     <title>login</title>
@@ -17,7 +18,22 @@
                 <h1>login</h1>
                 <p>seja bem-vindo(a) novamente. faça login para acessar 
                     sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post" autocomplete="onfff"></form>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="espaco">
+                        <i class="material-icons">person</i>
+                       <input type="email" name="login" id="ilogin" placeholder="login de usuario" autocomplete="email"
+                       required maxlength="30" size="17">
+                       <label for="ilogin">Login</label>
+                    </div>
+                    <div class="espaco">
+                        <i class="material-icons">vpn_key</i>
+                        <input type="password" name="senha" id="isenha" placeholder="senha de usuario" autocomplete="current-password"
+                        required minlength="10" maxlength="20" size="17">
+                        <label for="isenha">Senha</label>
+                    </div>
+                        <input type="submit" value="entrar">
+                        <a href="#">esqueci minha senha</a><i class="material-icons">mail</i>
+                </form>
             </div>
         </section>
     </main>
