--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                         <input type="submit" value="entrar">
-                        <a href="#">esqueci minha senha</a><i class="material-icons">mail</i>
+                        <a href="#" class="botao">esqueci minha senha<i class="material-icons">mail</i></a>
                 </form>
             </div>
         </section>
