--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     <div class="espaco">
                         <i class="material-icons">person</i>
                        <input type="email" name="login" id="ilogin" placeholder="login de usuario" autocomplete="email"
-                       required maxlength="30" size="15">
+                       required maxlength="30">
                        <label for="ilogin">Login</label>
                     </div>
                     <div class="espaco">
                         <i class="material-icons">vpn_key</i>
                         <input type="password" name="senha" id="isenha" placeholder="senha de usuario" autocomplete="current-password"
-                        required minlength="10" maxlength="20" size="15">
+                        required minlength="10" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
                         <input type="submit" value="entrar">
